--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-theres nothing here, im working on it ok, dont rush me, if you do ill cry to your mom
+theres nothing here, im working on it ok, dont rush me, if you do ill cry to your mom (also i forgot my flash drive)
