--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
+<title>Nothing here</title>
 theres nothing here, im working on it ok, dont rush me, if you do ill cry to your mom (also i forgot my flash drive)
